--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Blog Atelier Dassi</h1>
+    <h1>Blog Atelier Edmond Dassi</h1>
     <p>Passion, Technique et Deux-Roues</p>
   </header>
   
@@ -27,7 +27,7 @@
       <article class="blog-post">
         <img src="files/photos/IMG11.PNG" alt="Honda CB750 en cours de restauration" class="featured-image">
         <h2>L'Art de la Restauration : Redonner Vie à une Classique</h2>
-        <p class="date">Publié le 15 juin 2023</p>
+        <p class="date">Publié le 12 juin 2024</p>
         <p>La semaine dernière, nous avons eu le plaisir de terminer la restauration d'une magnifique Honda CB750 de 1969. Ce projet a été un véritable défi, mais aussi une source immense de satisfaction. Nous vous emmenons dans les coulisses de cette restauration passionnante...</p>
         <p>La Honda CB750 est une moto emblématique qui a révolutionné l'industrie lors de son lancement. Notre client nous a confié sa CB750 dans un état qui nécessitait une restauration complète. Nous avons commencé par un démontage minutieux, documentant chaque étape...</p>
         <a href="https://leocare.eu/fr/blog/restaurer-motos-vintage/">Lire la suite</a>
@@ -35,10 +35,10 @@
 
       <article class="blog-post">
         <img src="files/photos/IMG12.png" alt="Yamaha XT600Z Ténéré en préparation pour le rallye" class="featured-image">
-        <h2>Préparation Moto pour le Grand Paris Dakar Classic</h2>
+        <h2>Activité de Formation des Apprentis Mécaniciens</h2>
         <p class="date">Publié le 20 mai 2024</p>
-        <p>L'excitation est à son comble ! Nous sommes fiers d'annoncer que nous préparons actuellement une Yamaha XT600Z Ténéré de 1983 pour le prochain Grand Paris Dakar Classic. Dans ce post, nous partageons les défis uniques liés à la préparation d'une moto pour cette aventure épique...</p>
-        <p>La préparation d'une moto pour un rallye comme le Paris Dakar Classic nécessite une approche différente de nos projets habituels. Nous devons non seulement restaurer la moto à son état d'origine, mais aussi l'améliorer pour qu'elle puisse endurer les conditions extrêmes du désert... pour que ce soit au Bénin à Zè pour des activités organisées localement.</p>
+        <p>Nous sommes fiers d'annoncer notre récente activité de formation destinée aux apprentis mécaniciens de l'association des mécaniciens professionnels de Zè au Bénin. Cet événement a été une excellente occasion pour les jeunes mécaniciens d'acquérir des compétences pratiques et théoriques sous la supervision de nos experts...</p>
+        <p>La formation a couvert divers aspects de la mécanique moto, y compris l'entretien et la réparation, la personnalisation, et le diagnostic électronique avancé. Les apprentis ont également eu l'opportunité de travailler sur des motos réelles, leur permettant d'appliquer les techniques apprises en temps réel...</p>
         <a href="https://fr.xgzmotorcycle.com/info/what-is-fuel-injection-system-motorcycle--89909350.html">Lire la suite</a>
       </article>
     </main>
