--- a/blog.html
+++ b/blog.html
@@ -25,7 +25,7 @@
   <div class="blog-container">
     <main class="blog-posts">
       <article class="blog-post">
-        <img src="files/photos/IMG11.PNG" alt="Honda CB750 en cours de restauration" class="featured-image">
+        <img src="files/photos/IMG11.png" alt="Honda CB750 en cours de restauration" class="featured-image">
         <h2>L'Art de la Restauration : Redonner Vie à une Classique</h2>
         <p class="date">Publié le 12 juin 2024</p>
         <p>La semaine dernière, nous avons eu le plaisir de terminer la restauration d'une magnifique Honda CB750 de 1969. Ce projet a été un véritable défi, mais aussi une source immense de satisfaction. Nous vous emmenons dans les coulisses de cette restauration passionnante...</p>
@@ -86,4 +86,3 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
- 
