--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="index.html">Accueil</a></li>
       <li><a href="galerie.html">Galerie</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
     </ul>
   </nav>
 
