--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   
   <nav>
     <ul>
+      <li><a href="#home">Accueil</a></li>
       <li><a href="#services">Nos Services</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="galerie.html">Galerie</a></li>
