--- a/index.html
+++ b/index.html
@@ -16,13 +16,19 @@
   
   <nav>
     <ul>
-      <li><a href="#home">Accueil</a></li>
+      <li><a href="#accueil">Accueil</a></li>
       <li><a href="#services">Nos Services</a></li>
       <li><a href="#contact">Contact</a></li>
       <li><a href="galerie.html">Galerie</a></li>
       <li><a href="blog.html">Blog</a></li>
     </ul>
   </nav>
+
+  <!-- Section Accueil -->
+  <section class="accueil" id="accueil">
+    <h2>Bienvenue</h2>
+    <p>Bienvenue sur le site officiel de l'Atelier Dassi - Mécanique Moto. Notre atelier est situé dans la commune de Zè, au Bénin, et nous sommes spécialisés dans la réparation et l'entretien de motos depuis plus de 30 ans. Nous sommes reconnus pour notre expertise et notre passion pour les deux-roues, offrant des services de haute qualité pour une clientèle variée incluant des particuliers, des entreprises privées et publiques.</p>
+  </section>
 
   <!-- Ajout du carousel d'images -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
