--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <header>
-    <h1>Atelier Dassi Edmond</h1>
+    <h1>Atelier Edmond Dassi</h1>
     <p>Mécanique Moto de Précision</p>
   </header>
   
