--- a/index.html
+++ b/index.html
@@ -37,6 +37,11 @@
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="7"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="8"></li>
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -50,6 +55,18 @@
       </div>
       <div class="carousel-item">
         <img src="files/photos/IMG4.png" class="d-block w-100" alt="En pleine réparation chez nous">
+      </div>
+      <div class="carousel-item">
+        <img src="files/photos/IMG13.png" class="d-block w-100" alt="Tricycle Kloboto 1">
+      </div>
+      <div class="carousel-item">
+        <img src="files/photos/IMG14.png" class="d-block w-100" alt="Tricycle Kloboto 2">
+      </div>
+      <div class="carousel-item">
+        <img src="files/photos/IMG15.png" class="d-block w-100" alt="Tricycle simple">
+      </div>
+      <div class="carousel-item">
+        <img src="files/photos/IMG16.png" class="d-block w-100" alt="Tricycle taxi">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
