--- a/galerie.html
+++ b/galerie.html
@@ -16,9 +16,10 @@
   
   <nav>
     <ul>
-      <li><a href="index.html">Accueil</a></li>
+      <li><a href="index.html#accueil">Accueil</a></li>
+      <li><a href="index.html#services">Nos Services</a></li>
+      <li><a href="index.html#contact">Contact</a></li>
       <li><a href="blog.html">Blog</a></li>
-      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
