--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
         <h3>Préparation pour les Événements Locaux à Zè</h3>
         <p>L'Atelier Dassi est en pleine effervescence ! Nous préparons actuellement plusieurs motos pour les événements locaux dans la commune de Zè. Que ce soit pour des rassemblements de motards, des démonstrations ou des compétitions locales, notre équipe travaille avec passion pour que chaque moto soit prête à briller. Suivez l'avancement de ces projets passionnants sur notre blog.</p>
       </article>
+      <article>
+        <h3>Célébration de la journée des artisans du Bénin</h3>
+        <p>LES ARTISANS DE ZE ET LA CNAP-BÉNIN MAGNIFIENT TALON POUR LA JAB QU'ILS ONT CÉLÉBRÉ LE 22 JUILLET.</p>
+        <p>Dans le cadre de cette fête, le Président du Cadre de Concertation des artisans de Zè, Mr Dassi Edmond le Patron de l'atelier mécanique Dassi a remercié le président Patrice Talon pour les réformes entreprises en faveur des artisans et a appelé les artisans à s'approprier ces réformes pour améliorer leur situation.</p>
+        <video controls>
+          <source src="files/videos/JAB ZE .mp4" type="video/mp4">
+          Votre navigateur ne supporte pas la lecture de vidéos.
+        </video>
+        <p>Suivez la vidéo en intégralité sur <a href="https://www.youtube.com/watch?v=_dJPmTFxNY0&ab_channel=BENINPASSIONTV">YouTube</a>.</p>
+      </article>
     </section>
 
     <section class="projects">
