--- a/index.html
+++ b/index.html
@@ -7,9 +7,36 @@
   <link rel="stylesheet" href="styles.css">
   <!-- Inclure Bootstrap CSS pour le carousel -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    .service-icon {
+      width: 50px; /* Taille réduite des icônes */
+      height: 50px;
+    }
+    header {
+      background-color: #004080; /* Couleur bleu foncé */
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      margin-bottom: 30px;
+      position: relative;
+    }
+    header img {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      width: 60px; /* Taille de l'image */
+      height: 60px;
+    }
+    video {
+      width: 100%;
+      max-width: 600px; /* Taille maximale de la vidéo */
+      height: auto;
+    }
+  </style>
 </head>
 <body>
   <header>
+    <img src="files/photos/ED.png" alt="Logo">
     <h1>Atelier Edmond Dassi</h1>
     <p>Mécanique Moto de Précision</p>
   </header>
@@ -113,7 +140,7 @@
         <h3>Célébration de la journée des artisans du Bénin</h3>
         <p>LES ARTISANS DE ZE ET LA CNAP-BÉNIN MAGNIFIENT TALON POUR LA JAB QU'ILS ONT CÉLÉBRÉ LE 22 JUILLET.</p>
         <p>Dans le cadre de cette fête, le Président du Cadre de Concertation des artisans de Zè, Mr Dassi Edmond le Patron de l'atelier mécanique Dassi a remercié le président Patrice Talon pour les réformes entreprises en faveur des artisans et a appelé les artisans à s'approprier ces réformes pour améliorer leur situation.</p>
-        <video controls>
+        <video controls width="300">
           <source src="files/videos/JAB ZE .mp4" type="video/mp4">
           Votre navigateur ne supporte pas la lecture de vidéos.
         </video>
